# react-native-duckdb

./: .gitignore  .gitmodules  README.md
docs/: README.md  expo.md  extensions.md  spatial.md
example/: package.json
example/src/: App.tsx
example/src/tests/: extensions.test.ts  spatial.test.ts
package/: RNDuckDB.podspec
package/android/: CMakeLists.txt  build.gradle
scripts/: build-duckdb-ios.sh  build-spatial-deps.sh  configure-extensions.js  vcpkg-spatial-deps-options.cmake
scripts/vcpkg-triplets/: arm64-android-rn.cmake  arm64-ios-rn.cmake  arm64-iossim-rn.cmake  x64-android-rn.cmake
